AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = nibbles
nibbles_SOURCES = AppConstants.hh \
    NibblesApp.cc NibblesApp.hh \
    engine/EngineConstants.hh \
    engine/Game.cc engine/Game.hh \
    engine/Level.cc engine/Level.hh engine/LevelData.hh \
    engine/Snake.cc engine/Snake.hh \
    engine/Timer.cc engine/Timer.hh \
    ui/UIConstants.hh \
    ui/NibblesFrame.cc ui/NibblesFrame.hh \
    ui/NibblesPanel.cc ui/NibblesPanel.hh

